src/objects/BatchUpdateAccountTeam__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IsExcuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否已经执行</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewUserId__c</fullName>
        <label>入职用户</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OlderUserId__c</fullName>
        <externalId>true</externalId>
        <label>离职用户</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>批量修改客户小组</label>
</CustomObject>